--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -56,6 +56,25 @@ jobs:
       - name: Install Dependencies
         run: uv sync --no-dev --group test
 
+      - name: 🧪 Run Tests
+        run: uv run pytest --cov --cov-report=xml --cov-report=term-missing
+      {%- if test_pre_release %}{% raw %}
+
+      # If something goes wrong with --pre tests, we can open an issue in the repo
+      - name: 📝 Report --pre Failures
+        if: failure() && github.event_name == 'schedule'
+        uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PLATFORM: ${{ matrix.platform }}
+          PYTHON: ${{ matrix.python-version }}
+          RUN_ID: ${{ github.run_id }}
+          TITLE: "[test-bot] pip install --pre is failing"
+        with:
+          filename: .github/TEST_FAIL_TEMPLATE.md
+          update_existing: true{% endraw %}
+      {%- endif %}{% raw %}
+
 {% endraw %}
 
   
