--- a/project/.github/workflows/ci.yml.jinja
+++ b/project/.github/workflows/ci.yml.jinja
@@ -32,7 +32,7 @@ jobs:
     runs-on: ${{ matrix.platform }}{% endraw %}
     {%- if test_pre_release %}
     env:
-      UV_PRERELEASE: {% raw %}${{ github.event_name == 'schedule' && 'allow' || '' }}{% endraw %}
+      UV_PRERELEASE: {% raw %}${{ github.event_name == 'schedule' && 'allow' || 'if-necessary-or-explicit' }}{% endraw %}
     {%- endif %}
     strategy:
       fail-fast: false
@@ -107,7 +107,7 @@ jobs:
           path: dist
       - name: 🚢 Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-      - uses: softprops/action-gh-release@v1
+      - uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
           files: './dist/*'
